syntax = "proto3";
package proto.canary;

option go_package = "github.com/spinnaker/kleat/api/client/canary";

import "google/protobuf/wrappers.proto";

import "canary/supported_type.proto";

// Configuration for the Google canary integration.
message Google {
  // Whether Google is enabled as a metrics store provider.
  google.protobuf.BoolValue enabled = 1;

  // The list of configured accounts.
  repeated GoogleAccount accounts = 2;

  // Whether Google Cloud Storage is enabled as a persistent store.
  google.protobuf.BoolValue gcsEnabled = 3;

  // Whether Google Cloud Monitoring (formerly Stackdriver) is enabled as a metrics source.
  google.protobuf.BoolValue stackdriverEnabled = 4;

  // Number of milliseconds to wait between caching the names of available
  // Cloud Monitoring metric types (used when building canary configs). Defaults to
  // `60000`.
  int32 metadataCachingIntervalMS = 5;
}

// Configuration for a Google account.
message GoogleAccount {
  // The name of the account.
  string name = 1;

  // The path to a JSON file containing the service account key that Spinnaker
  // will use to authenticate.
  //  
  // You need this only if Spinnaker is not deployed on a Google Compute Engine
  // VM, or if the account needs permissions not afforded to the VM it is
  // running on.
  // See https://cloud.google.com/compute/docs/access/service-accounts for more information.
  string jsonPath = 2;

  // The name of a Cloud Storage bucket that this account has access to. If you
  // specify a globally unique bucket name that doesn't exist yet, Kayenta 
  // creates that bucket for you.
  string bucket = 3;

  // Where to create the new bucket. This is only required if the bucket you
  // specify doesn't exist yet. See
  // https://cloud.google.com/storage/docs/managing-buckets#manage-class-location.
  string bucketLocation = 4;

  // The root-level folder, in the specified bucket, in which to store all
  // the canary service's persistent data. Defaults to `kayenta`.
  google.protobuf.StringValue rootFolder = 5;

  // (Required) The Google Cloud Platform project the canary service will use to
  // consume Cloud Storage and Cloud Monitoring data.
  string project = 6;

  // For Google Cloud Monitoring (formerly Stackdriver) use METRICS_STORE.
  // For Google Cloud Storage, use CONFIGURATION_STORE and 
  // OBJECT_STORE. All three can be a list of `supportedTypes` in the same
  // account, or each in a separate account.
  repeated SupportedType supportedTypes = 7;
}
